[package]
name = "rust-interpolate"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Perry"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
rand = { version = "0.8.5" }
itertools = { version = "0.10.3" }
nalgebra = { version = "0.30.1" }
kdtree = { version = "0.5.1" }
plotlib = "0.5.1"
